preenchimento automatico dos campos, endereço, cidade e bairro

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="formulario__campo">
                     <label class="campo__etiqueta" for="telefone">Contato</label>
-                    <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita"
+                    <input name="telefone" id="telefone" type="tel" placeholder="(00) 00000-0000" class="campo__escrita"
                         required />
                 </div>
             </div>
@@ -100,7 +100,8 @@
 
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="cep">CEP</label>
-                <input name="cep" id="cep" class="campo__escrita" required />
+                <input name="cep" id="cep" placeholder="00000-000" class="campo__escrita" required />
+                <div id="erro"></div>
             </div>
 
             <div class="formulario__campo">
