--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <input type="checkbox" id="opções-menu" class="opções__botão">
             <li class="opções__item"><a href="#" class="opções__link">Categorias</a></li>
             <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
-            <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+            <li class="opções__item"><a href="./estante.html" class="opções__link">Minha estante</a></li>
         </ul>
 
         <div class="container">
