Metodos forEach, map e Filter

--- a/estante.html
+++ b/estante.html
@@ -45,9 +45,7 @@
 </header>
 
 <body>
-  <section class="banner">
-    <h2 class="banner__titulo">Minha Estante</h2>
-</section>
+  <section class="banner"></section>
   <nav class="wrap">
     <ul class="nav">
       <li><button class="btn btn-front" href="#" id="btnFiltrarLivrosFront" value="front-end">LIVROS DE
@@ -61,7 +59,7 @@
     </ul>
   </nav>
   <section class="livros wrap" id="livros">
-    <div class="livro">
+    <!-- <div class="livro">
       <img class="livro__imagens" src="./img/imagensEstante/Cangaceiro-Javascript.png" alt="Capa do livro Cangaceiro JavaScript" />
       <h2 class="livro__titulo">
         Cangaceiro JavaScript:
@@ -292,7 +290,7 @@
         <span class="tag">Front-end</span>
         <span class="tag">Back-end</span>
       </div>
-    </div>
+    </div> -->
 
   </section>
   <section id="valor_total_livros_disponiveis">
@@ -301,10 +299,13 @@
     </div>
   </section>
 
-
   <footer class="rodape">
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
+  <script src="./js/main.js"></script>
+  <script src="./js/metodoForEach.js"></script>
+  <script src="./js/metodoMap.js"></script>
+  <script src="./js/metodoFilter.js"></script>
 </body>
 
 </html>
