--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </li>
         </ul>
     </footer>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 
