--- a/estante.html
+++ b/estante.html
@@ -307,6 +307,7 @@
   <script src="./js/metodoMap.js"></script>
   <script src="./js/metodoFilter.js"></script>
   <script src="./js/metodoSort.js"></script>
+  <script src="./js/metodoReduce.js"></script>
 </body>
 
 </html>
